--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -16,7 +16,6 @@
     .imgContainer {
       width: 700px;
       height: 700px;
-      background-color: crimson;
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
@@ -29,6 +28,7 @@
 
       img {
         height: 90%;
+        border-radius: 50%;
 
         @include mobile{
           height: 50%;
