--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -34,9 +34,9 @@
                     font-size: 18px;
                     margin-right: 5px;
                 }
-                .span {
-                    font-size: 15;
-                    font-weight: 500;
+                a {
+                    text-decoration: none;
+                    color: inherit;
                 }
 
             }
